--- a/pySpark/Spark and Python for Big Data with PySpark/exercise/14 sparkStreaming.ipynb
+++ b/pySpark/Spark and Python for Big Data with PySpark/exercise/14 sparkStreaming.ipynb
@@ -9,7 +9,9 @@
     "from pyspark import SparkContext\n",
     "from pyspark.streaming import StreamingContext\n",
     "\n",
-    "sc = SparkContext('local[2]','NetworkWorkCount')"
+    "sc = SparkContext('local[2]','NetworkWorkCount')\n",
+    "# master: str, cluster URL to connect\n",
+    "# appName:"
    ]
   },
   {
